winkelmandje left side

--- a/winkelmandje.html
+++ b/winkelmandje.html
@@ -46,48 +46,59 @@
         </nav>
         <main class="container">
             <div class="row winkelmandje">
-                <div class="col-8 winkelmandje-details">
+                <div class="col-md-8 winkelmandje-details">
                     <div class="row winkelmandje-details-box">
                         <div class="col-12 winkelmandje-details-box-header py-md-5">
                             <h1>Winkelmandje</h1>
                         </div>
-                        <div class="col-12 winkelmandje-details-box-title py-3">
-                            <div class="winkelmandje-details-box-title-details">
-                                <h4 class="m-0">Details</h4>
-                            </div>
-                            <div class="winkelmandje-details-box-title-hoeveelheid-prijs-totaal">
-                                <h4 class="m-0">Hoeveelheid</h4>
-                            </div>
-                            <div class="winkelmandje-details-box-title-hoeveelheid-prijs-totaal">
-                                <h4 class="m-0">Prijs</h4>
-                            </div>
-                            <div class="winkelmandje-details-box-title-hoeveelheid-prijs-totaal">
-                                <h4 class="m-0">Totaal</h4>
+                        <div class="col-12 d-none d-md-block winkelmandje-details-box-title py-3">
+                            <div class="row">
+                                <div class="col-md-6 winkelmandje-details-box-title-details">
+                                    <h4 class="m-0">Details</h4>
+                                </div>
+                                <div class="col-md-2 winkelmandje-details-box-title-Aantal-prijs-totaal">
+                                    <h4 class="m-0">Aantal</h4>
+                                </div>
+                                <div class="col-md-2 winkelmandje-details-box-title-Aantal-prijs-totaal">
+                                    <h4 class="m-0">Prijs</h4>
+                                </div>
+                                <div class="col-md-2 winkelmandje-details-box-title-Aantal-prijs-totaal">
+                                    <h4 class="m-0">Totaal</h4>
+                                </div>
                             </div>
                         </div>
                         <div class="col-12 winkelmandje-details-box-info py-3">
-                            <div class="winkelmandje-details-box-info-details">
-                                <div class="winkelmandje-details-box-info-details-product">
-                                    <p>test</p>
+                            <div class="row">
+                                <div class="col-md-6 col-12 d-flex justify-content-md-start justify-content-center winkelmandje-details-box-info-details p-0">
+                                    <div class="winkelmandje-details-box-info-details-product">
+                                        <p>test</p>
+                                    </div>
+                                    <div class="pl-3 pt-4">
+                                        <p>PingWing bandje</p>
+                                        <p>kleur: <span>rood</span></p>
+                                    </div>
                                 </div>
-                                <div>
-                                    <p>test2</p>
+                                <div class="col-md-2 col-12 d-flex justify-content-md-start justify-content-center winkelmandje-details-box-info-Aantal-prijs-totaal pt-4">
+                                    <div>
+                                        <input type="number" min="1" max="100" placeholder="1">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="winkelmandje-details-box-info-hoeveelheid-prijs-totaal">
-                                <p>test3</p>
-                            </div>
-                            <div class="winkelmandje-details-box-info-hoeveelheid-prijs-totaal">
-                                <p>test4</p>
-                            </div>
-                            <div class="winkelmandje-details-box-info-hoeveelheid-prijs-totaal">
-                                <p>test5</p>
+                                <div class="col-md-2 col-12 d-flex justify-content-md-start justify-content-center winkelmandje-details-box-info-Aantal-prijs-totaal pt-4">
+                                    <p>€ <span>69.99</span></p>
+                                </div>
+                                <div class="col-md-2 col-12 d-flex justify-content-md-start justify-content-center winkelmandje-details-box-info-Aantal-prijs-totaal pt-4">
+                                    <p>€ <span>69.99</span></p>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-12">4</div>
+                        <div class="col-12 d-flex justify-content-md-start justify-content-center winkelmandje-details-box-verder py-3">
+                            <a href="./product.html">Verder winkelen</a>
+                        </div>
                     </div>
                 </div>
-                <div class="col-4 winkelmandje-betalen"></div>
+                <div class="col-md-4 winkelmandje-betalen">
+
+                </div>
             </div>
         </main>
         <footer class="row p-md-5 pt-4">
