--- a/winkelmandje.html
+++ b/winkelmandje.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./Css/winkelmandje.css">
     <script defer src="./Js/winkelmandje.js"></script>
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    <link rel="stylesheet" href="https://use.typekit.net/wpi2keu.css">
     <title>Winkelmandje</title>
 </head>
 <body>
@@ -45,7 +46,7 @@
                 </ul>
             </div>
         </nav>
-        <main class="container">
+        <main class="container pt-5">
             <div class="row winkelmandje">
                 <div class="col-md-8 winkelmandje-details">
                     <div class="row winkelmandje-details-box">
@@ -107,7 +108,9 @@
                     </div>
                 </div>
                 <div class="col-md-4 winkelmandje-betalen">
-                    <div class="winkelmandje-betalen-overzicht"></div>
+                    <div class="winkelmandje-betalen-overzicht">
+                        
+                    </div>
                     <div class="winkelmandje-betalen-promotie"></div>
                     <div class="winkelmandje-betalen-aantal"></div>
                     <div class="winkelmandje-betalen-foto"></div>
