--- a/contact.html
+++ b/contact.html
@@ -45,9 +45,9 @@
                 </ul>
             </div>
         </nav>
-        <main class="container">
+        <main class="container pt-5">
             <div class="row">
-                <div class="col-md-7 contact-form pb-md-5 mb-5">
+                <div class="col-md-6 contact-form pb-md-5 mb-5">
                     <div class="contact-form-header py-5">
                         <h1>Contacteer ons</h1>
                     </div>
@@ -81,7 +81,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-5 contact-map pb-md-5 mb-5">
+                <div class="col-md-5 offset-md-1 contact-map pb-md-5 mb-5">
                     <div class="contact-map-header py-5">
                         <h5>
                             Bikinibroek 6969<br>
