--- a/logIn.html
+++ b/logIn.html
@@ -57,7 +57,7 @@
             </div>
         </nav>
         <!--Forms login en registreer-->
-        <main class="container">
+        <main class="container pt-5">
             <div class="row">
                 <div class="col-md-5 contact-form pb-md-5 mb-5">
                     <div class="contact-form-header py-5">
