genral styles add

--- a/winkelmandje.html
+++ b/winkelmandje.html
@@ -107,15 +107,32 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 winkelmandje-betalen">
-                    <div class="winkelmandje-betalen-overzicht">
-                        
+                <div class="col-md-4 winkelmandje-betalen pt-4 px-5 mt-5">
+                    <div class="winkelmandje-betalen-overzicht py-3">
+                        <h4>Bestel overzicht</h4>
                     </div>
-                    <div class="winkelmandje-betalen-promotie"></div>
-                    <div class="winkelmandje-betalen-aantal"></div>
-                    <div class="winkelmandje-betalen-foto"></div>
-                    <div class="winkelmandje-betalen-totaal"></div>
-                    <div class="winkelmandje-betalen-betalen"></div>
+                    <div class="winkelmandje-betalen-promotie py-3">
+                        <p class="pb-2">Promotie code</p>
+                        <input type="text" placeholder="2ACD75PZ">
+                    </div>
+                    <div class="winkelmandje-betalen-aantal py-3">
+                        <p class="pb-1">69X</p>
+                        <div class="d-flex">
+                            <p>PingWing - Rood</p>
+                            <p>€69</p>
+                        </div>
+                    </div>
+                    <div class="winkelmandje-betalen-foto py-3">
+                        <div class="foto">
+                        </div>
+                    </div>
+                    <div class="winkelmandje-betalen-totaal py-3">
+                        <p>Totaal: € 4.829,31</p>
+                        <p>€69</p>
+                    </div>
+                    <div class="winkelmandje-betalen-betalen">
+                        <button class="btn btn-primary w-100">BETALEN</button>
+                    </div>
                 </div>
             </div>
         </main>
