--- a/index.html
+++ b/index.html
@@ -54,30 +54,72 @@
     </nav>
     <!--MAIN-->
     <main class="main container">
-        <div class="row">
-            <div class="col-md-6 justify-content-md-start column-header">afbeelding</div>
-            <div class="col-md-6 justify-content-md-start column-header">
-
-                <h1 class="header-text">RELAX MORE <br> FEEL SAFE</h1>
-                <p>Ga altijd met een gerust hart op<br>
+        <div class="row-koop-nu">
+            <div class="col-6 col-koop-nu-foto"><p>Afbeelding</p></div>
+            <div class="col-6 col-koop-nu-info">
+                <div>
+                    <h1 class="header-text">RELAX MORE <br> FEEL SAFE</h1>
+                </div>
+                <div>
+                    <p>Ga altijd met een gerust hart op<br>
                     pad en weet dat je kinderen veilig zijn,</p>
-                <button class="btn btn-info">Koop nu</button>
-
+                </div>
+                <div>
+                    <button class="btn btn-info">Koop nu</button>
+                </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col">Specificaties</div>
+ 
+        <div class="row flex-column row-specs">
+            <div>
+                    <h1>SPECIFICATIES</h1>
+            </div>
+                <div>
+                    <p>Test</p>
+            </div>
+            <div>  
+                    <button>Meer info</button>
+            </div>
+
         </div>
-        <div class="row">
+        <div class="row-myping">
             <div class="col">Mockup GSM</div>
             <div class="col">MY Pingwing</div>
+            <div>
+                <h1>MYPINGWING</h1>
+            </div>
+            <div>
+                <p>De app die in verbinding staat met het bandje.<br>
+                Door een duidelijke en gebruiksvriendelijke<br>
+            user interface is het makkelijk om alle informatie die je <br>
+        nodig hebt terug te vinden zodat je altijd een overzicht</p>
+    </div>
+            <div><p>Enkele features:</p>
+                <ul>
+                <li>Radius waar kind zich bevindt</li>
+                <li>Medisch dossier</li>
+                <li>Bel functie</li>
+                </ul></div>
+            <div><button>Meer info</button></div>
+            <div>
+                <button>App Store</button>
+                <button>Google Play</button>
+            </div>
         </div>
-        <div class="row">
+        <div class="row-overping">
+            <div class="row-overping-titel">
+                <h1>Over PINGWING</h1>
+            </div>
+            <div class="row-overping-tekstblokken">
             <div class="col">Team</div>
             <div class="col">Focus</div>
             <div class="col">Onze missie</div>
         </div>
-        <div class="row">
+        <div class="row-overping-info">
+            <button>Meer info</button>
+        </div>
+        </div>
+        <div class="row-megafooter">
             <div class="col">MEGAFOOTER</div>
         </div>
 
