adjust on all pages

--- a/index.html
+++ b/index.html
@@ -14,163 +14,171 @@
     <title>Index</title>
 </head>
 <body>
-<div class="container-fluid fullpage m-0 p-0">
-    <!--NAVIGATIEBALK-->
-    <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <a class="navbar-brand brand" href="./index.html">Pingwing</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
-                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <ul class="navbar-nav navigation-list">
-                <li class="nav-item px-md-4 align-self-center">
-                    <a class="nav-link" href="#">Product </a>
-                </li>
-                <li class="nav-item align-self-center">
-                    <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
-                </li>
-                <li class="nav-item align-self-center">
-                    <a class="nav-link px-md-4 active" href="./overOns.html">Over ons<span class="sr-only"></span></a>
-                </li>
-                <li class="nav-item align-self-center">
-                    <a class="nav-link px-md-4" href="./contact.html">Contact</a>
-                </li>
-                <li class="nav-item align-self-center">
-                    <a class="">|</a>
-                </li>
-                <li class="nav-item align-self-center">
-                    <a class="nav-link px-md-4" href="./contact.html">
-                        <ion-icon name="bag-outline"></ion-icon>
-                    </a>
-                </li>
-                <li class="nav-item align-self-center">
-                    <a class="nav-link pr-md-4" href="#">
-                        <ion-icon name="person-outline"></ion-icon>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-    <!--MAIN-->
-    <main class="main container">
-        <div class="row-koop-nu">
-            <div class="col-6 col-koop-nu-foto"><p>Afbeelding</p></div>
-            <div class="col-6 col-koop-nu-info">
-                <div>
-                    <h1 class="header-text">RELAX MORE <br> FEEL SAFE</h1>
+    <div class="container-fluid fullpage m-0 p-0">
+        <!--NAVIGATIEBALK-->
+        <nav class="navbar navbar-expand-md navbar-light bg-light">
+            <a class="navbar-brand brand" href="./index.html">Pingwing</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <ul class="navbar-nav navigation-list">
+                    <li class="nav-item px-md-4 align-self-center">
+                        <a class="nav-link" href="#">Product </a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./bestel.html">Bestel</a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4 active" href="./overOns.html">Over ons<span class="sr-only"></span></a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./contact.html">Contact</a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="">|</a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link px-md-4" href="./contact.html">
+                            <ion-icon class="" name="bag-outline"></ion-icon>
+                        </a>
+                    </li>
+                    <li class="nav-item align-self-center">
+                        <a class="nav-link pr-md-4" href="#">
+                            <ion-icon class="" name="person-outline"></ion-icon>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <!--MAIN-->
+        <main class="container">
+            <div class="row row-koop-nu">
+                <div class="col-6 d-flex align-items-center col-koop-nu-foto">
+                    <p>Afbeelding</p>
+                </div>
+                <div class="col-6 d-flex justify-content-center flex-column col-koop-nu-info pl-5 pb-5">
+                    <div>
+                        <h1 class="header-text display-3">RELAX MORE <br> FEEL SAFE</h1>
+                    </div>
+                    <div>
+                        <p>Ga altijd met een gerust hart op<br>
+                        pad en weet dat je kinderen veilig zijn,</p>
+                    </div>
+                    <div>
+                        <button class="btn btn-info mt-4">Koop nu</button>
+                    </div>
+                </div>
+            </div>
+            <div class="row flex-column row-specs">
+                <div class="row-specs-title">
+                    <h1 class="display-3">SPECIFICATIES</h1>
+                </div>
+                <div class="d-flex align-items-center justify-content-center row-specs-content flex-column">
+                    <div>
+                        <p>Test</p>
+                    </div>
+                    <div>  
+                        <button class="btn btn-info mt-5">Meer info</button>
+                    </div>
+                </div>
+            </div>
+            <div class="row row-myping">
+                <div class="col-6 d-flex align-items-end row-myping-mockup pb-5">
+                    <img class="pb-5 mb-5" src="./Images/MockUpGsm.PNG">
+                </div>
+                <div class="col-5 offset-1 row-myping-info pb-5">
+                    <div class="row-myping-info-box pb-5 mb-5">
+                        <div>
+                            <h1 class="display-3">MYPINGWING</h1>
+                        </div>
+                        <div>
+                            <p>De app die in verbinding staat met het bandje.<br>
+                            Door een duidelijke en gebruiksvriendelijke<br>
+                            user interface is het makkelijk om alle informatie die je <br>
+                            nodig hebt terug te vinden zodat je altijd een overzicht</p>
+                        </div>
+                        <div><p>Enkele features:</p>
+                            <ul>
+                                <li>Radius waar kind zich bevindt</li>
+                                <li>Medisch dossier</li>
+                                <li>Bel functie</li>
+                            </ul></div>
+                        <div>
+                            <button class="btn btn-info">Meer info</button>
+                        </div>
+                        <div class="pt-5">
+                            <button class="btn btn-info">App Store</button>
+                            <button class="btn btn-info">Google Play</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row d-flex flex-column row-overping">
+                <div class="row d-flex justify-content-center row-overping-titel pb-5">
+                    <h1 class="display-3">Over PINGWING</h1>
+                </div>
+                <div class="row row-overping-tekstblokken py-5">
+                    <div class="col-4 team-focus-missie">
+                        <p>Team</p>
+                    </div>
+                    <div class="col-4 team-focus-missie px-4">
+                        <p>Focus</p>
+                    </div>
+                    <div class="col-4 team-focus-missie"> 
+                        <p>Missie</p>
+                    </div>
+                </div>
+                <div class="row row-overping-info pl-3 pt-5">
+                    <button class="btn btn-info">Meer info</button>
+                </div>
+            </div>
+        </main>
+        <!--FOOTER-->
+        <footer class="row p-md-5 pt-4">
+            <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer">
+                <div class="column1-footer-links d-flex flex-column">
+                    <a class="pb-2" href="./index.html">Home</a>
+                    <a class="pb-2" href="./product.html">Product</a>
+                    <a class="pb-2" href="./overOns.html">Over ons</a>
+                    <a href="./contact.html">Contact</a>
+                </div>
+            </div>
+            <div class="col-md-4 d-flex flex-column align-items-center justify-content-center column2-footer">
+                <div class="pb-2">
+                    <h2>PINGWING</h2>
+                </div>
+                <div class="pb-2">
+                    <a href=""><ion-icon name="logo-youtube"></ion-icon></a>
+                    <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
+                    <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
+                    <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
                 </div>
                 <div>
-                    <p>Ga altijd met een gerust hart op<br>
-                    pad en weet dat je kinderen veilig zijn,</p>
-                </div>
-                <div>
-                    <button class="btn btn-info">Koop nu</button>
+                    <p>2021 &copy; PINGWING</p>
                 </div>
             </div>
-        </div>
- 
-        <div class="row flex-column row-specs">
-            <div>
-                    <h1>SPECIFICATIES</h1>
+            <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer py-4 py-md-0">
+                <div class="column3-footer-info">
+                    <div class="info">
+                        <ion-icon name="call-outline"></ion-icon>
+                        <p>+32 123 45 789</p>
+                    </div>
+                    <div class="info pb-3">
+                        <ion-icon name="mail-outline"></ion-icon>
+                        <a href="mailto:test@test.com">Info@PingWing.be</a>
+                    </div>
+                    <div class="info">
+                        <ion-icon name="location-outline"></ion-icon>
+                        <p class="m-0">
+                            Kempische Steenweg  293<br>
+                            3500 Hasselt
+                        </p>
+                    </div>
+                </div>
             </div>
-                <div>
-                    <p>Test</p>
-            </div>
-            <div>  
-                    <button>Meer info</button>
-            </div>
-
-        </div>
-        <div class="row-myping">
-            <div class="col">Mockup GSM</div>
-            <div class="col">MY Pingwing</div>
-            <div>
-                <h1>MYPINGWING</h1>
-            </div>
-            <div>
-                <p>De app die in verbinding staat met het bandje.<br>
-                Door een duidelijke en gebruiksvriendelijke<br>
-            user interface is het makkelijk om alle informatie die je <br>
-        nodig hebt terug te vinden zodat je altijd een overzicht</p>
+        </footer>
     </div>
-            <div><p>Enkele features:</p>
-                <ul>
-                <li>Radius waar kind zich bevindt</li>
-                <li>Medisch dossier</li>
-                <li>Bel functie</li>
-                </ul></div>
-            <div><button>Meer info</button></div>
-            <div>
-                <button>App Store</button>
-                <button>Google Play</button>
-            </div>
-        </div>
-        <div class="row-overping">
-            <div class="row-overping-titel">
-                <h1>Over PINGWING</h1>
-            </div>
-            <div class="row-overping-tekstblokken">
-            <div class="col">Team</div>
-            <div class="col">Focus</div>
-            <div class="col">Onze missie</div>
-        </div>
-        <div class="row-overping-info">
-            <button>Meer info</button>
-        </div>
-        </div>
-        <div class="row-megafooter">
-            <div class="col">MEGAFOOTER</div>
-        </div>
-
-    </main>
-
-
-
-    <!--FOOTER-->
-    <footer class="row p-md-5 pt-4">
-        <div class="col-md-4 d-flex justify-content-center align-items-center column1-footer">
-            <div class="column1-footer-links d-flex flex-column">
-                <a class="pb-2" href="./index.html">Home</a>
-                <a class="pb-2" href="./product.html">Product</a>
-                <a class="pb-2" href="./overOns.html">Over ons</a>
-                <a href="./contact.html">Contact</a>
-            </div>
-        </div>
-        <div class="col-md-4 d-flex flex-column align-items-center justify-content-center column2-footer">
-            <div class="pb-2">
-                <h2>PINGWING</h2>
-            </div>
-            <div class="pb-2">
-                <a href=""><ion-icon name="logo-youtube"></ion-icon></a>
-                <a href=""><ion-icon name="logo-linkedin"></ion-icon></a>
-                <a href=""><ion-icon name="logo-facebook"></ion-icon></a>
-                <a href=""><ion-icon name="logo-instagram"></ion-icon></a>
-            </div>
-            <div>
-                <p>2021 &copy; PINGWING</p>
-            </div>
-        </div>
-        <div class="col-md-4 d-flex justify-content-center align-items-center column3-footer py-4 py-md-0">
-            <div class="column3-footer-info">
-                <div class="info">
-                    <ion-icon name="call-outline"></ion-icon>
-                    <p>+32 123 45 789</p>
-                </div>
-                <div class="info pb-3">
-                    <ion-icon name="mail-outline"></ion-icon>
-                    <a href="mailto:test@test.com">Info@PingWing.be</a>
-                </div>
-                <div class="info">
-                    <ion-icon name="location-outline"></ion-icon>
-                    <p class="m-0">
-                        Kempische Steenweg  293<br>
-                        3500 Hasselt
-                    </p>
-                </div>
-            </div>
-        </div>
-    </footer>
-</div>
 </body>
 </html>
