--- a/winkelmandje.html
+++ b/winkelmandje.html
@@ -48,7 +48,7 @@
         </nav>
         <main class="container pt-5">
             <div class="row winkelmandje">
-                <div class="col-md-8 winkelmandje-details">
+                <div class="col-md-7 winkelmandje-details">
                     <div class="row winkelmandje-details-box">
                         <div class="col-12 d-flex justify-content-center justify-content-md-start winkelmandje-details-box-header py-md-5">
                             <h1>Winkelmandje</h1>
@@ -107,31 +107,33 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 winkelmandje-betalen pt-4 px-5 mt-5">
-                    <div class="winkelmandje-betalen-overzicht py-3">
-                        <h4>Bestel overzicht</h4>
-                    </div>
-                    <div class="winkelmandje-betalen-promotie py-3">
-                        <p class="pb-2">Promotie code</p>
-                        <input type="text" placeholder="2ACD75PZ">
-                    </div>
-                    <div class="winkelmandje-betalen-aantal py-3">
-                        <p class="pb-1">69X</p>
-                        <div class="d-flex">
-                            <p>PingWing - Rood</p>
+                <div class="col-md-4 col-8 offset-2 offset-md-1 winkelmandje-betalen ">
+                    <div class="row winkelmandje-betalen-box p-4 mt-5 mb-5 mb-md-0">
+                        <div class="col-12 winkelmandje-betalen-overzicht py-3">
+                            <h4>Bestel overzicht</h4>
+                        </div>
+                        <div class="col-12 winkelmandje-betalen-promotie py-3">
+                            <p class="pb-2">Promotie code</p>
+                            <input class="w-100" type="text" placeholder="2ACD75PZ">
+                        </div>
+                        <div class="col-12 winkelmandje-betalen-aantal py-3">
+                            <p class="pb-1">69X</p>
+                            <div class="d-flex justify-content-between">
+                                <p>PingWing - Rood</p>
+                                <p>€69</p>
+                            </div>
+                        </div>
+                        <div class="col-12 winkelmandje-betalen-foto py-3">
+                            <div class="foto">
+                            </div>
+                        </div>
+                        <div class="col-12 winkelmandje-betalen-totaal py-3 d-flex justify-content-between">
+                            <p>Totaal: € 4.829,31</p>
                             <p>€69</p>
                         </div>
-                    </div>
-                    <div class="winkelmandje-betalen-foto py-3">
-                        <div class="foto">
+                        <div class="col-12 winkelmandje-betalen-betalen">
+                            <button class="btn btn-primary w-100">BETALEN</button>
                         </div>
-                    </div>
-                    <div class="winkelmandje-betalen-totaal py-3">
-                        <p>Totaal: € 4.829,31</p>
-                        <p>€69</p>
-                    </div>
-                    <div class="winkelmandje-betalen-betalen">
-                        <button class="btn btn-primary w-100">BETALEN</button>
                     </div>
                 </div>
             </div>
